--- a/global.css
+++ b/global.css
@@ -25,14 +25,15 @@
 .userPost {
 	display: flex;
 	flex-direction: column;
-	height: 90px;
+	height: 85px;
 	padding: 15px;
 }
 .userInfo {
 	display: flex;
 	flex-direction: row;
 	border-bottom: 1px solid rgb(233, 233, 233);
-	padding-bottom: 7.5px;
+	padding-bottom: 6px;
+	min-height: 55px;
 }
 #profilePic {
 	height: 50px;
@@ -95,7 +96,7 @@
 	padding-left: 11px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	margin-bottom: 2px;
+	margin-bottom: 1px;
 	font-weight: 500;
 	font-size:11px;
 	color: #3b5998;
@@ -114,9 +115,9 @@
 	font-size:11px;
 	color: #3b5998;
 	padding-left: 11px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-bottom: 2px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	margin-bottom: 1px;
 }
 .memberInteractions__blakeJamiesonLike--dark {
 	color: rgb(51, 51, 51);	
@@ -127,21 +128,21 @@
 	align-items: center;
 	background-color: rgb(237, 239, 244);
 	padding-left: 11px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-bottom: 2px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	margin-bottom: 1px;
 }
 #memberPic1 {
-	height: 35px;
-	width: 35px;
+	height: 32px;
+	width: 32px;
 }
 #memberPic2 {
-	height: 35px;
-	width: 35px;
+	height: 32px;
+	width: 32px;
 }
 #memberPic3 {
-	height: 35px;
-	width: 35px;
+	height: 32px;
+	width: 32px;
 }
 .memberInteractions__comment {
 	display: flex;
@@ -172,5 +173,10 @@
 	color: rgb(153, 153, 153);
 }
 .userInteractions {
-	
+	display: flex;
+	justify-content: space-between;
+	padding-left: 15px;
+	font-weight: 500;
+	font-size:11px;
+	color: #3b5998;
 }
