--- a/global.css
+++ b/global.css
@@ -175,8 +175,24 @@
 .userInteractions {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding-left: 15px;
+	padding-right: 15px;
 	font-weight: 500;
 	font-size:11px;
 	color: #3b5998;
+}
+.userInteractions__boost {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+/*	padding-left: 15px;
+	padding-right: 15px;
+	font-weight: 500;
+	font-size:11px;
+	color: #3b5998;*/
+}
+#megaphone {
+	height: 20px;
+	width: 20px;
 }
