--- a/global.css
+++ b/global.css
@@ -106,7 +106,7 @@
 	font-weight: 500;
 	font-size:5px;
 }
-.memberInteractions__blakeJamiesonLike {
+.memberInteractions__blakeJamieson {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -114,10 +114,14 @@
 	font-weight: 500;
 	font-size:11px;
 	color: #3b5998;
-	padding-left: 11px;
+	padding-left: 9px;
 	padding-top: 4px;
 	padding-bottom: 4px;
 	margin-bottom: 1px;
+}
+#thumb {
+	height: 18px;
+	width: 19px;
 }
 .memberInteractions__blakeJamiesonLike--dark {
 	color: rgb(51, 51, 51);	
@@ -127,7 +131,17 @@
 	flex-direction: row;
 	align-items: center;
 	background-color: rgb(237, 239, 244);
-	padding-left: 11px;
+	padding-left: 9px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	margin-bottom: 1px;
+}
+.memberInteractions__commenter--placeholder {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	background-color: rgb(237, 239, 244);
+	padding-left: 9px;
 	padding-top: 4px;
 	padding-bottom: 4px;
 	margin-bottom: 1px;
@@ -159,6 +173,15 @@
 	color: rgb(51, 51, 51);
 	font-weight: 500;
 }
+.memberInteractions__commentBox {
+	font-weight: 500;
+	min-width: 488px;
+	padding: 3px;
+	font-size:11px;
+	color: rgb(153, 153, 153);
+	background-color: white;
+	border: 1px solid rgb(196, 205, 224);
+}
 .memberInteractions__commentDetails {
 	display: flex;
 	align-items: center;
@@ -175,9 +198,10 @@
 .userInteractions {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	padding-left: 15px;
+	align-items: flex-start;
+	padding-left: 10px;
 	padding-right: 15px;
+	padding-bottom: 5px;
 	font-weight: 500;
 	font-size:11px;
 	color: #3b5998;
@@ -186,11 +210,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-/*	padding-left: 15px;
-	padding-right: 15px;
-	font-weight: 500;
-	font-size:11px;
-	color: #3b5998;*/
 }
 #megaphone {
 	height: 20px;
